added retrofit and hilt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="space.stanton.technicaltest">
+    package="space.stanton.technicaltask">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,19 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TechnicalTest"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup"
+        android:name=".App">
         <activity
-            android:name="space.stanton.technicaltask.PostListActivity"
+            android:name="space.stanton.technicaltask.ui.PostListActivity"
             android:label="All posts"
-            android:exported="true"
-            >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="space.stanton.technicaltask.PostDetailActivity" />
+        <activity android:name="space.stanton.technicaltask.ui.PostDetailActivity" />
     </application>
 
 </manifest>
