--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,9 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     implementation 'com.google.code.gson:gson:2.8.7'
+
+    // Room
+    implementation "androidx.room:room-runtime:2.4.0-alpha04"
+    kapt "androidx.room:room-compiler:2.4.0-alpha04"
+    implementation 'androidx.room:room-ktx:2.4.0-alpha04'
 }
